--- a/tale-forge/package.json
+++ b/tale-forge/package.json
@@ -6,7 +6,7 @@
   "description": "AI-powered interactive storytelling platform for children aged 4-12",
   "scripts": {
     "dev": "vite",
-    "build": "tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
