--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "description": "AI-powered interactive storytelling platform for children aged 4-12",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
+    "postinstall": "chmod +x node_modules/.bin/vite || true",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
