chore: Remove sensitive files from repository and update .gitignore
- Removed .mcp-config.json, .mcp.json, deploy-env-vars.sh from tracking
- Removed .claude/ directory with sensitive configurations
- Updated .gitignore to prevent these files from being committed
- Files remain locally but are no longer tracked by git

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,17 @@ node_modules/
 .env
 .env.production
 .env.local
+.env.local.functions
+
+# Files with secrets
+.mcp-config.json
+.mcp.json
+deploy-env-vars.sh
+.claude/
+
+# PostgresTools config (contains database password)
+postgrestools.jsonc
+IMPORTANT_DATABASE_CREDENTIALS.md
 .vscode
 # OS specific
 
