--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,29 @@
-# API Keys (Required to enable respective provider)
+# Tale Forge - Environment Variables Template
+# IMPORTANT: Copy this file to .env and fill in your actual values
+# NEVER commit the .env file to version control
+
+# --- Supabase (Required) ---
+# Get these from your Supabase project settings: https://app.supabase.com/project/_/settings/api
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# --- App Configuration ---
+VITE_BASE_URL=http://localhost:3001
+VITE_APP_ENV=development
+
+# --- Development ---
+NODE_ENV=development
+
+# --- Optional: MCP Server API Keys ---
+# Only add these if you're using MCP servers
+LINEAR_API_KEY=your_linear_api_key_if_using_linear
+NOTION_API_KEY=your_notion_api_key_if_using_notion
+SENTRY_AUTH_TOKEN=your_sentry_auth_token_if_using_sentry
+SENTRY_ORG=your_sentry_organization_if_using_sentry
+SENTRY_PROJECT=your_sentry_project_if_using_sentry
+
+# --- AI API Keys (for TaskMaster) ---
+# At least one of these is required for TaskMaster AI features
 ANTHROPIC_API_KEY="your_anthropic_api_key_here"       # Required: Format: sk-ant-api03-...
 PERPLEXITY_API_KEY="your_perplexity_api_key_here"     # Optional: Format: pplx-...
 OPENAI_API_KEY="your_openai_api_key_here"             # Optional, for OpenAI models. Format: sk-proj-...
@@ -11,6 +36,6 @@ AZURE_OPENAI_API_KEY="your_azure_key_here"            # Optional, for Azure Open
 OLLAMA_API_KEY="your_ollama_api_key_here"             # Optional: For remote Ollama servers that require authentication.
 GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...
 
-# Monitoring & Analytics
+# --- Monitoring & Analytics ---
 VITE_SENTRY_DSN="your_sentry_dsn_here"                # Optional: Sentry error monitoring DSN
 VITE_ANALYTICS_API_URL="your_analytics_api_url"       # Optional: Custom analytics endpoint
