--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
   },
   "dependencies": {
     "@playwright/mcp": "^0.0.35",
-    "lru-cache": "^11.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -79,6 +78,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.0.2",
     "lucide-react": "^0.541.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
@@ -91,6 +91,7 @@
     "react-router-dom": "^6.26.0",
     "recharts": "^3.1.2",
     "sonner": "^2.0.7",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "task-master-ai": "^0.25.1",
